# hehcraft

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  hehcraft.spec
.github/workflows/: cmake-multi-platform.yml
include/: app.hpp  buffer.hpp  camera.hpp  descriptors.hpp  device.hpp  frame_info.hpp  game_object.hpp  keyboard_controller.hpp  model.hpp  pipeline.hpp  renderer.hpp  simple_render_system.hpp  swap_chain.hpp  utils.hpp  window.hpp
include/core/: app.hpp  block.hpp  buffer.hpp  camera.hpp  descriptors.hpp  device.hpp  frame_info.hpp  game_object.hpp  keyboard_controller.hpp  keys_n_mouse.hpp  model.hpp  pipeline.hpp  renderer.hpp  shader.hpp  swap_chain.hpp  texture.hpp  utils.hpp  window.hpp
include/core/systems/: point_light.hpp  simple_render.hpp
include/utils/: image_writer.hpp  math.hpp  toml_extended.hpp
include/world/: block.hpp  chunk.hpp  world.hpp
libs/: glfw3.lib
models/grass/: grass.blend  grass.blend1  grass.mtl
models/grass/textures/: grass_unwrapped.aseprite
shaders/: compile.sh  point_light.frag  point_light.vert  simple.frag  simple.vert  simple_vert.spv  specular.frag  specular.vert
src/: app.cpp  buffer.cpp  camera.cpp  descriptors.cpp  device.cpp  game_object.cpp  keyboard_controller.cpp  main.cpp  model.cpp  pipeline.cpp  renderer.cpp  simple_render_system.cpp  swap_chain.cpp  window.cpp
src/core/: app.cpp  block.cpp  buffer.cpp  camera.cpp  descriptors.cpp  device.cpp  game_object.cpp  glad.c  keyboard_controller.cpp  keys_n_mouse.cpp  model.cpp  pipeline.cpp  renderer.cpp  shader.cpp  swap_chain.cpp  texture.cpp  window.cpp
src/core/systems/: point_light.cpp  simple_render.cpp
src/utils/: image_writer.cpp  toml_extended.cpp
src/world/: block.cpp  chunk.cpp  world.cpp
